tests/compile_fail/from_str/struct_unknown_attribute.stderr
error: no attribute is allowed here
 --> tests/compile_fail/from_str/struct_unknown_attribute.rs:2:3
  |
2 | #[from_str(unknown = "unknown")]
  |   ^^^^^^^^
